Added final paper submission instructions

--- a/scalcom/index.html
+++ b/scalcom/index.html
@@ -37,11 +37,20 @@ title: IEEE ScalCom 2025
 </section>
 
 <section
-  class="page-section container-fluid px-5 pt-3 pb-5 mt-2 d-flex flex-column gap-4"
+  class="page-section container-fluid px-5 pt-3 pb-5 mt-2 d-flex flex-column gap-2"
 >
-  <div class="alert alert-success" role="alert">
-    Registration Opening Soon.
-    <a href="/registration/" class="alert-link">Learn more</a>
+  <div>
+    <div class="alert alert-success" role="alert">
+      Registration Opening Soon.
+      <a href="/registration/" class="alert-link">Learn more</a>
+    </div>
+    <div class="alert alert-warning" role="alert">
+      Authors: Please use the following instructions for submitting final paper
+      versions
+      <a href="/final-paper-instructions/" class="alert-link"
+        >Final Paper Instructions</a
+      >
+    </div>
   </div>
   <div class="row g-5">
     <div class="col-sm-4 d-flex flex-column gap-4">
@@ -346,6 +355,47 @@ title: IEEE ScalCom 2025
               Submission Link:
               <a href="https://edas.info/N33585" target="_blank"
                 >https://edas.info/N33585</a
+              >
+            </p>
+          </div>
+          <h3>Final Paper Instructions</h3>
+          <p class="fw-bold fs-5">
+            <span style="color: red">Important</span>: Final paper and copyright
+            submissions must be made through IEEE CPS (Conference Publishing
+            Services), <span style="color: red">NOT EDAS</span>!
+          </p>
+          <p class="fs-5">
+            Below is the link to the SWC 2025 Author's Final Paper Formatting
+            and Submission Instructions webpage. It is applicable to all
+            co-located conferences (UIC, ATC, DigitalTwin, Metaverse, ScalCom).
+            This will allow you to:
+          </p>
+          <ul class="fs-5">
+            <li>Verify/convert your paper using PDF eXpress</li>
+            <li>Submit your paper's copyright</li>
+            <li>Submit your final paper</li>
+          </ul>
+          <div
+            class="d-flex flex-column gap-2 justify-content-start align-items-start"
+          >
+            <div class="d-flex flex-row gap-2">
+              <a
+                class="btn btn-primary"
+                target="_blank"
+                href="https://ieeecps.org/cps/v2/auth/login?ak=1&pid=2FBloH8EZnpjmoosiBNJHK"
+                >Submit Final Paper to SWC 2025</a
+              >
+              <a class="btn btn-light" href="/final-paper-instructions/"
+                >View Final Submission Instructions</a
+              >
+            </div>
+
+            <p class="fs-6">
+              Submission Link:
+              <a
+                href="https://ieeecps.org/cps/v2/auth/login?ak=1&pid=2FBloH8EZnpjmoosiBNJHK"
+                target="_blank"
+                >https://ieeecps.org/cps/v2/auth/login?ak=1&pid=2FBloH8EZnpjmoosiBNJHK</a
               >
             </p>
           </div>
