--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@ title: Home
       Registration Opening Soon.
       <a href="/registration/" class="alert-link">Learn more</a>
     </div>
+    <div class="alert alert-warning" role="alert">
+      Authors: Please use the following instructions for submitting final paper
+      versions
+      <a href="/final-paper-instructions/" class="alert-link"
+        >Final Paper Instructions</a
+      >
+    </div>
     <div class="alert alert-info" role="alert">
       Travel grants available for IEEE Computational Intelligence Society (CIS)
       members.
