updated final paper submission instructions page

--- a/final-paper-instructions/index.html
+++ b/final-paper-instructions/index.html
@@ -10,7 +10,7 @@ title: IEEE SWC 2025 Final Paper Instructions
     background-image: url('/assets/images/jack-carter-_oYcF7p42xM-unsplash.jpg');
     background-size: cover;
     background-position: center 65%;
-    min-height: 70vh;
+    min-height: 60vh;
     position: relative;
     color: white;
   "
@@ -21,7 +21,7 @@ title: IEEE SWC 2025 Final Paper Instructions
     >
       <h1 class="w-75 responsive-width fw-bold text-center display-5">
         IEEE Smart World Congress 2025 <br />
-        Final Paper Instructions
+        Final Paper Submission Instructions
       </h1>
     </div>
   </div>
