updated final paper submission buttons

--- a/atc/index.html
+++ b/atc/index.html
@@ -397,7 +397,7 @@ title: IEEE ATC 2025
                 class="btn btn-primary"
                 target="_blank"
                 href="https://ieeecps.org/cps/v2/auth/login?ak=1&pid=2FBloH8EZnpjmoosiBNJHK"
-                >Submit Final Paper to SWC 2025</a
+                >Submit Final Paper to ATC 2025</a
               >
               <a class="btn btn-light" href="/final-paper-instructions/"
                 >View Final Submission Instructions</a
