--- a/uic/index.html
+++ b/uic/index.html
@@ -390,7 +390,7 @@ title: IEEE UIC 2025
                 class="btn btn-primary"
                 target="_blank"
                 href="https://ieeecps.org/cps/v2/auth/login?ak=1&pid=2FBloH8EZnpjmoosiBNJHK"
-                >Submit Final Paper to SWC 2025</a
+                >Submit Final Paper to UIC 2025</a
               >
               <a class="btn btn-light" href="/final-paper-instructions/"
                 >View Final Submission Instructions</a
