--- a/travel/visa-information/index.html
+++ b/travel/visa-information/index.html
@@ -28,11 +28,238 @@ title: Visa Information
 </section>
 
 <section
-  class="page-section container-fluid px-5 pb-5 d-flex flex-column gap-2 text-center"
+  class="page-section container-fluid px-5 pb-5 d-flex flex-column gap-2"
 >
   <div class="row g-5">
     <div class="col-sm-12 d-flex flex-column gap-4">
-      <h2 class="fs-2">Information Coming Soon</h2>
+      <h2 class="fs-1">Visa Requests</h2>
+      <p class="fs-5">
+        Request an IEEE Smart World Congress 2025 (IEEE SWC 2025) Visa Letter –
+        useful for accepted authors or paid attendees from short lead time visa
+        application countries, and Request a Visa for Canada useful for any
+        attendee worried about Visa processing times whether an author (accepted
+        or not), or attendee (paid or not). This process is entirely between the
+        applicant and the government of Canada; IEEE SWC is not involved.
+      </p>
+      <div>
+        <h3>IEEE SWC Visa Letter</h3>
+        <p class="fs-5">
+          If you require a Visa Letter of Invitation from IEEE Smart World
+          Congress 2025 (IEEE SWC 2025), please complete the Visa Letter Request
+          Form and select your conference.
+        </p>
+        <div class="d-flex flex-column justify-content-start align-items-start">
+          <a
+            class="btn btn-primary"
+            href="https://docs.google.com/forms/d/e/1FAIpQLSeI4OZwQk3iwt5mbNbSYk7_8QOgwqbLOskWUMX-QHC8pjB3pQ/viewform?usp=sharing&ouid=102783896470175567812"
+            target="_blank"
+            >Visa Letter Request Form</a
+          >
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSeI4OZwQk3iwt5mbNbSYk7_8QOgwqbLOskWUMX-QHC8pjB3pQ/viewform?usp=sharing&ouid=102783896470175567812"
+            >https://docs.google.com/forms/d/e/1FAIpQLSeI4OZwQk3iwt5mbNbSYk7_8QOgwqbLOskWUMX-QHC8pjB3pQ/viewform?usp=sharing&ouid=102783896470175567812</a
+          >
+        </div>
+      </div>
+      <div class="fs-5">
+        <p>Please Note:</p>
+        <ol type="1">
+          <li>
+            It is IEEE policy to only issue Visa Letter of Invitation to
+            <b
+              >Speakers, Authors, Committee Members, and Attendees paid in
+              FULL</b
+            >.
+          </li>
+          <li>
+            IEEE SWC can only issue the Visa Letter of Invitation for the
+            conference. No other kind of documentation will be provided for use
+            of visa applications.
+          </li>
+          <li>Please allow 3-5 business days for processing.</li>
+        </ol>
+      </div>
+      <div>
+        <h3>DISCLAIMER</h3>
+        <ol type="1" class="fs-5">
+          <li>
+            We strongly advise participants to personally check entry and visa
+            requirements before making travel arrangements, as there might be
+            country-specific conditions that you are not aware of. For the most
+            accurate information, please contact the Canadian embassy/consulate
+            in your home country.
+          </li>
+          <li>
+            IEEE SWC will NOT issue any Letter of Sponsorship or Letter of
+            Guarantee if you are required to do so by the immigration
+            department. It is the participants’ sole responsibility to obtain
+            such documents. IEEE SWC will not refund anyone for cancellations
+            due to visa rejections or participant’s inability to enter the
+            country. IEEE SWC cannot change the decision of the Canadian Embassy
+            or any other government departments, nor will we appeal to the
+            embassy on behalf of the applicant.
+          </li>
+          <li>
+            All questions/concerns regarding the status of your visa should be
+            directed to the Canadian Embassy in your home country. In no event
+            will IEEE SWC be liable for any loss or damage including without
+            limitation, indirect or consequential loss or damage, or any loss or
+            damage whatsoever arising from loss of data or profits arising out
+            of, or in connection with, the information provided on this page.
+          </li>
+        </ol>
+      </div>
+      <div>
+        <h3>About Visa</h3>
+        <ol type="1" class="fs-5">
+          <li>
+            Holders of a foreign passport will either require a Temporary
+            resident visa (TRV) or an Electronic Travel Authorization, to enter
+            Canada.
+          </li>
+          <li>
+            To find out if you need a TRV or eTA to travel to Canada, see: Find
+            out if you need a visa to travel to Canada(url:
+            <a
+              target="_blank"
+              href="https://www.cic.gc.ca/english/visit/visas.asp"
+              >https://www.cic.gc.ca/english/visit/visas.asp</a
+            >).
+          </li>
+          <li>
+            Click here (<a
+              target="_blank"
+              href="https://www.canada.ca/en/immigration-refugees-citizenship/services/visit-canada/entry-requirements-country.html#visaRequired"
+              >https://www.canada.ca/en/immigration-refugees-citizenship/services/visit-canada/entry-requirements-country.html#visaRequired</a
+            >) to learn which countries require travellers to have visas when
+            entering Canada.
+          </li>
+        </ol>
+      </div>
+      <div>
+        <h3>Visa Processing Times</h3>
+        <p class="fs-5">
+          The processing times for visa applications posted online are
+          historical, meaning they're measured based on how long it took to
+          process 80% of applications in the past six to eight weeks. As a
+          result, processing times maybe different than those posted online at
+          the time of application submission. Participants are strongly
+          encouraged to apply as early as possible ahead of their departure date
+          in order to allow sufficient time for their application to be
+          processed and if approved, subsequent visa issuance in their passport.
+        </p>
+      </div>
+      <div>
+        <h3>How to Apply</h3>
+        <ol type="1" class="fs-5">
+          <li>
+            <b>APPLY</b>
+            <ol type="a">
+              <li>
+                If you require an ETA, use the following link: Electronic Travel
+                Authorization (eTA): How to apply - Canada.ca (<a
+                  target="_blank"
+                  href="https://www.canada.ca/en/immigration-refugees-citizenship/services/visit-canada/eta/apply.html"
+                  >https://www.canada.ca/en/immigration-refugees-citizenship/services/visit-canada/eta/apply.html</a
+                >)
+              </li>
+              <li>
+                <p>
+                  If you require a visa, you MUST apply online through the IRCC
+                  Secure Network (<a
+                    href="http://www.canada.ca/en/immigration-refugees-citizenship/services/application/account.html"
+                    target="_blank"
+                    >http://www.canada.ca/en/immigration-refugees-citizenship/services/application/account.html</a
+                  >).
+                </p>
+                <p>How to Apply:</p>
+                <p>
+                  You will be prompted to either sign in using your GCKey user
+                  ID and password, or through a Signin partner. If you don't
+                  already have an account, you can create one by clicking
+                  "Register“ under the "Don't have an account?” section. Once
+                  you are signed in you will be prompted to answer a series of
+                  questions to determine your eligibility to apply for a visa.
+                  If you are eligible to apply for a visa, you will be prompted
+                  to the complete the visa application form (IMM 5257).
+                </p>
+                <p>
+                  Please take note of the following item when completing your
+                  visa application form:<br /><br />
+
+                  <b>IMPORTANT</b>: Tag your visa application (Form IMM 5257)
+                  with the special event code. In the "Details of Visit to
+                  Canada" section, select: "Other." For question 1a) Purpose of
+                  my visit," enter the special event code (Please check your
+                  visa letter) into the free text box in 1b) Other.
+                </p>
+              </li>
+            </ol>
+          </li>
+          <li>
+            <b>BIOMETRICS</b>
+            <p>
+              If you are required to complete biometrics (<a
+                href="https://www.canada.ca/en/immigration-refugees-citizenship/campaigns/biometrics/facts.html"
+                target="_blank"
+                >https://www.canada.ca/en/immigration-refugees-citizenship/campaigns/biometrics/facts.html</a
+              >) you will be issued a Biometrics Instructions Letter (BIL).
+              Please schedule your appointment as soon as you receive your BIL.
+              <br /><br />
+              You must complete your biometrics before IRCC can start to process
+              your application. For information on whether or not you must
+              provide biometrics, please refer to: Fast Facts About Biometrics
+              (<a
+                href="https://www.canada.ca/en/immigration-refugees-citizenship/campaigns/biometrics/facts.html"
+                target="_blank"
+                >https://www.canada.ca/en/immigration-refugees-citizenship/campaigns/biometrics/facts.html</a
+              >).
+            </p>
+          </li>
+          <li>
+            <b>PASSPORT</b>
+            <p>
+              Check your application status by visiting: Check your application
+              status — Immigration and citizenship — Canada.ca (<a
+                href="https://www.canada.ca/en/immigration-refugees-citizenship/services/application/check-status.html"
+                target="_blank"
+                >https://www.canada.ca/en/immigration-refugees-citizenship/services/application/check-status.html</a
+              >) <br /><br />
+              If your visa application is approved you will receive a letter
+              instructing you to submit your passport to the closest
+              <a
+                href="https://www.canada.ca/en/immigration-refugees-citizenship/corporate/contact-ircc/offices/find-visa-application-centre.html"
+                target="_blank"
+                >Visa Application Centre (VAC)</a
+              >
+              through mail or courier. <br /><br />
+              <b
+                >Note you will not be able to enter Canada without having your
+                visa affixed to your passport.</b
+              >
+            </p>
+          </li>
+        </ol>
+      </div>
+      <div>
+        <h3>Need Help?</h3>
+        <p class="fs-5">
+          Refer to the guide (<a
+            href="https://www.canada.ca/en/immigration-refugees-citizenship/services/application/application-forms-guides/guide-5256-applying-visitor-visa-temporary-resident-visa.html"
+            target="_blank"
+            >https://www.canada.ca/en/immigration-refugees-citizenship/services/application/application-forms-guides/guide-5256-applying-visitor-visa-temporary-resident-visa.html</a
+          >) for information on how to complete your application (IMM 5257).
+          <br /><br />For further assistance, see the Help Centre (<a
+            href="https://www.cic.gc.ca/english/helpcentre/results-by-topic.asp?top=16"
+            target="_blank"
+            >https://www.cic.gc.ca/english/helpcentre/results-by-topic.asp?top=16</a
+          >) or complete the web form (<a
+            target="_blank"
+            href="https://www.cic.gc.ca/english/contacts/web-form.asp?v1"
+            >https://www.cic.gc.ca/english/contacts/web-form.asp?v1</a
+          >).
+        </p>
+      </div>
     </div>
   </div>
 </section>
