--- a/index.html
+++ b/index.html
@@ -188,6 +188,17 @@ title: Home
 
       <div class="col-md-4 col-sm-6">
         <img
+          src="/assets/images/xiaokang.png"
+          alt="Dr. Oscar Lin"
+          class="circle-img mb-3"
+        />
+        <h5>Dr. Xiaokang Wang </h5>
+        <h6><i>Hainan University, China</i></h6>
+        <p>Co-Program Chair</p>
+      </div>
+      
+      <div class="col-md-4 col-sm-6">
+        <img
           src="/assets/images/singh.jpg"
           alt="Dr. Oscar Lin"
           class="circle-img mb-3"
