--- a/registration/index.html
+++ b/registration/index.html
@@ -27,12 +27,180 @@ title: Registration
 </section>
 
 <section
-  class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4 text-center"
+  class="page-section container-fluid px-5 pt-5 pb-5 mt-2 d-flex flex-column gap-4"
 >
   <div class="d-flex flex-column gap-4">
     <div class="row">
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4">
-        <h3 class="mb-2">Information Coming Soon</h3>
+        <h3 class="mb-2">
+          Registration Instructions for 2025 IEEE Smart World Congress (SWC
+          2025)
+        </h3>
+        <p>
+          <b
+            >You are strongly encouraged to read the following notes before
+            starting the registration process.</b
+          >
+        </p>
+        <h4>Full Conference Author Registration</h4>
+        <p>
+          <b>Full Conference Author Registration</b> is required for authors
+          with accepted papers (each paper must have at least one author who
+          completes the full registration either In-person or Online), and it
+          includes the following:
+        </p>
+        <ul>
+          <li>Publication of one accepted paper in the proceedings</li>
+          <li>A copy of the proceedings the accepted paper belongs to</li>
+          <li>
+            Access to all conference, Industry Day, workshops, tutorials, and
+            special sessions
+          </li>
+          <li>Program brochure and conference goodies</li>
+          <li>
+            For full conference author registration (in-person), lunch, coffee
+            breaks, and reception (<b>banquet is not included</b> and can be
+            paid separately)
+          </li>
+          <li>
+            For papers to be published in IEEE proceedings, two extra pages are
+            allowed, and each extra page costs <b>USD $100</b>
+          </li>
+        </ul>
+        <p>
+          The <b>Full Conference Author Registration</b> fees are listed below:
+        </p>
+        <table class="table table-bordered" cellpadding="8" cellspacing="0">
+          <thead>
+            <tr>
+              <th colspan="3" class="text-center">
+                Full Conference Author Registration Fee
+              </th>
+            </tr>
+            <tr>
+              <th class="text-center">Registration Type</th>
+              <th class="text-center">By June 30, 2025</th>
+              <th class="text-center">After June 30, 2025</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>IEEE Member (in-person)</td>
+              <td class="text-center">$750</td>
+              <td class="text-center">$850</td>
+            </tr>
+            <tr>
+              <td>Non-IEEE member (in-person)</td>
+              <td class="text-center">$900</td>
+              <td class="text-center">$1,000</td>
+            </tr>
+            <tr>
+              <td>IEEE Member (online)</td>
+              <td class="text-center">$500</td>
+              <td class="text-center">$600</td>
+            </tr>
+            <tr>
+              <td>Non-IEEE Member (online)</td>
+              <td class="text-center">$600</td>
+              <td class="text-center">$700</td>
+            </tr>
+            <tr>
+              <th colspan="3" class="text-center">Other Fees</th>
+            </tr>
+            <tr>
+              <td>Extra Page (max 2 pages)</td>
+              <td colspan="2" class="text-center">$100/page</td>
+            </tr>
+            <tr>
+              <td>Banquet and Award Ceremony Ticket</td>
+              <!-- <td colspan="2" class="text-center">$80/person</td> -->
+            </tr>
+          </tbody>
+        </table>
+        <p>
+          The early-bird deadline for
+          <b>Full Conference Author Registration</b> is
+          <b style="color: red">June 30, 2025</b>. The final deadline for
+          <b>Full Conference Author Registration</b> is
+          <b style="color: red">July 7, 2025</b>. Please note that if your
+          payment is not received by that date, the paper will be removed from
+          the proceedings. This deadline will be strictly enforced. <br /><br />
+          For authors with multiple accepted papers, one full registration is
+          valid for a <b>maximum of 3</b> papers, with the 2nd and 3rd papers
+          each requiring an additional <b>USD $300</b>. If a 4th paper is to be
+          registered, the author must complete a new registration.
+        </p>
+        <h4>Full Conference Non-Author Registration</h4>
+        <p>
+          <b>Full Conference Non-Author Registration</b> fee applies when one
+          author has already completed full registration for a paper, and
+          additional authors of the same paper or other attendees wish to
+          participate in the conference in person. The
+          <b>Full Conference Non-Author Registration</b> fees are listed below:
+        </p>
+        <table class="table table-bordered" cellpadding="8" cellspacing="0">
+          <thead>
+            <tr>
+              <th colspan="3" class="text-center">
+                Full Conference Non-Author Registration Fee
+              </th>
+            </tr>
+            <tr>
+              <th class="text-center">Registration Type</th>
+              <th class="text-center">By June 30, 2025</th>
+              <th class="text-center">After June 30, 2025</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>IEEE Member (in-person)</td>
+              <td class="text-center">$750</td>
+              <td class="text-center">$850</td>
+            </tr>
+            <tr>
+              <td>Non-IEEE member (in-person)</td>
+              <td class="text-center">$900</td>
+              <td class="text-center">$1,000</td>
+            </tr>
+            <tr>
+              <td>Student IEEE Member (in-person)</td>
+              <td class="text-center">$250</td>
+              <td class="text-center">$300</td>
+            </tr>
+            <tr>
+              <td>Student Non-IEEE Member (in-person)</td>
+              <td class="text-center">$350</td>
+              <td class="text-center">$400</td>
+            </tr>
+            <tr>
+              <td>IEEE Life Member</td>
+              <td class="text-center">$350</td>
+              <td class="text-center">$400</td>
+            </tr>
+            <tr>
+              <td>Online Participation</td>
+              <td class="text-center" colspan="2">$0</td>
+            </tr>
+            <tr class="text-center">
+              <th colspan="3">Other Fees</th>
+            </tr>
+            <tr>
+              <td>Banquet and Award Ceremony Ticket</td>
+              <!-- <td class="text-center" colspan="2">$80/person</td> -->
+            </tr>
+          </tbody>
+        </table>
+        <h4>Industry Day Tickets</h4>
+        <p>
+          The industry day (August 19) ticket is included in the registration.
+          If you wish to participate in Industry Day only, the ticket is sold
+          separately for <b>USD $100</b>.
+        </p>
+        <h4>Payment</h4>
+        <p>
+          Payment can be made by credit cards (Visa/Mastercard/American
+          Express).
+        </p>
       </div>
     </div>
   </div>
