Update registration alerts and links on visa page

--- a/cfp/index.html
+++ b/cfp/index.html
@@ -44,8 +44,8 @@ title: IEEE SWC 2025 Call for Papers
 >
   <div>
     <div class="alert alert-success" role="alert">
-      Registration Opening Soon.
-      <a href="/registration/" class="alert-link">Learn more</a>
+      Registration is now open. Early-bird deadline is <b>June 30</b>.
+      <a href="/registration/" class="alert-link">Register Now</a>
     </div>
     <div class="alert alert-warning" role="alert">
       Authors: Please use the following instructions for submitting final paper
@@ -271,9 +271,7 @@ title: IEEE SWC 2025 Call for Papers
           href="https://ieeecps.org/cps/v2/auth/login?ak=1&pid=2FBloH8EZnpjmoosiBNJHK"
           >Submit Final Paper to SWC 2025</a
         >
-        <a
-          class="btn btn-light"
-          href="/final-paper-instructions/"
+        <a class="btn btn-light" href="/final-paper-instructions/"
           >View Final Submission Instructions</a
         >
       </div>
