--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -48,7 +48,10 @@ title: Industry Day
           href="https://www.calgary.ca/major-projects/smart-city/tech-centre.html"
           target="_blank"
           >The City of Calgary Wave Tech Centre</a
-        >
+        >. <br /><br />
+        Industry day ticket included in regular
+        <a href="/registration/">conference registration</a>. Industry day only
+        tickets can be purchased for <b>USD $100</b>.
       </p>
       <hr />
       <div class="col-sm-12 d-flex flex-column gap-2">
