--- a/registration/index.html
+++ b/registration/index.html
@@ -32,17 +32,183 @@ title: Registration
   <div class="d-flex flex-column gap-4">
     <div class="row">
       <div class="col-12 mb-3 mb-sm-0 d-flex flex-column gap-4">
-        <h3 class="mb-2">
-          Registration Instructions for 2025 IEEE Smart World Congress (SWC
-          2025)
+        <h3 class="mb-2 fs-2">
+          Registration for IEEE Smart World Congress 2025 and Conferences
         </h3>
+        <div>
+          <p class="fs-5">
+            Early-bird full conference author registration deadline:
+            <b>June 30, 2025</b>
+          </p>
+          <p class="fs-5">
+            Final deadline for full conference author registration:
+            <b>July 7, 2025</b>
+          </p>
+        </div>
+
         <p>
           <b
-            >You are strongly encouraged to read the following notes before
+            >IMPORTANT: You are strongly encouraged to read the
+            <a href="#registration-instructions">instructions</a> below before
             starting the registration process.</b
           >
         </p>
-        <h4>Full Conference Author Registration</h4>
+        <hr />
+        <div class="d-flex flex-column gap-2" id="registration-links">
+          <h3>Registration Links</h3>
+          <p>Please select the appropriate conference to register for:</p>
+          <div class="row pb-3 g-4 justify-content-center">
+            <div class="col-sm-6 col-md-4">
+              <div class="card bg-light-subtle overflow-hidden">
+                <div
+                  style="
+                    width: auto !important;
+                    height: 150px !important;
+                    background-image: url(/assets/images/ahmed-zalabany-yTElJrzPHZo-unsplash.jpg);
+                    background-size: cover;
+                  "
+                ></div>
+                <div
+                  class="card-body d-flex flex-column justify-content-between gap-3 h-100"
+                >
+                  <h3 class="text-center">SWC 2025</h3>
+                  <h5 class="fs-6 text-center">IEEE SWC 2025 Main Track</h5>
+                  <a
+                    href="https://events.payqlick.com/event/48/ieee-swc-2025"
+                    class="btn btn-primary w-100"
+                    target="_blank"
+                    >Register</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <div class="card bg-light-subtle overflow-hidden">
+                <div
+                  style="
+                    width: auto !important;
+                    height: 150px !important;
+                    background-image: url(/assets/images/kelly-hofer-knzWhQ5plcg-unsplash.jpg);
+                    background-size: cover;
+                  "
+                ></div>
+                <div
+                  class="card-body d-flex flex-column justify-content-between gap-3 h-100"
+                >
+                  <h3 class="text-center">ATC 2025</h3>
+                  <h5 class="fs-6 text-center">IEEE ATC 2025</h5>
+                  <a
+                    href="https://events.payqlick.com/event/44/ieee-itc-2025"
+                    class="btn btn-primary w-100"
+                    target="_blank"
+                    >Register</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <div class="card bg-light-subtle overflow-hidden">
+                <div
+                  style="
+                    width: auto !important;
+                    height: 150px !important;
+                    background-image: url(/assets/images/Digital_Twin_Calgary.jpg);
+                    background-size: cover;
+                  "
+                ></div>
+                <div
+                  class="card-body d-flex flex-column justify-content-between gap-3 h-100"
+                >
+                  <h3 class="text-center">Digital Twin 2025</h3>
+                  <h5 class="fs-6 text-center">IEEE Digital Twin 2025</h5>
+                  <a
+                    href="https://events.payqlick.com/event/45/ieee-digital-twin-2025"
+                    class="btn btn-primary w-100"
+                    target="_blank"
+                    >Register</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <div class="card bg-light-subtle overflow-hidden">
+                <div
+                  style="
+                    width: auto !important;
+                    height: 150px !important;
+                    background-image: url(/assets/images/Metaverse_Calgary.jpg);
+                    background-size: cover;
+                  "
+                ></div>
+                <div
+                  class="card-body d-flex flex-column justify-content-between gap-3 h-100"
+                >
+                  <h3 class="text-center">Metaverse 2025</h3>
+                  <h5 class="fs-6 text-center">IEEE Metaverse 2025</h5>
+                  <a
+                    href="https://events.payqlick.com/event/43/ieee-metaverse-2025"
+                    class="btn btn-primary w-100"
+                    target="_blank"
+                    >Register</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <div class="card bg-light-subtle overflow-hidden">
+                <div
+                  style="
+                    width: auto !important;
+                    height: 150px !important;
+                    background-image: url(/assets/images/daven-froberg-pQqqbdwg6n4-unsplash.jpg);
+                    background-size: cover;
+                  "
+                ></div>
+                <div
+                  class="card-body d-flex flex-column justify-content-between gap-3 h-100"
+                >
+                  <h3 class="text-center">ScalCom 2025</h3>
+                  <h5 class="fs-6 text-center">IEEE ScalCom 2025</h5>
+                  <a
+                    href="https://events.payqlick.com/event/46/ieee-scalcom-2025"
+                    class="btn btn-primary w-100"
+                    target="_blank"
+                    >Register</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <div class="card bg-light-subtle overflow-hidden">
+                <div
+                  style="
+                    width: auto !important;
+                    height: 150px !important;
+                    background-image: url(/assets/images/jack-carter-_oYcF7p42xM-unsplash.jpg);
+                    background-size: cover;
+                  "
+                ></div>
+                <div
+                  class="card-body d-flex flex-column justify-content-between gap-3 h-100"
+                >
+                  <h3 class="text-center">UIC 2025</h3>
+                  <h5 class="fs-6 text-center">IEEE UIC 2025</h5>
+                  <a
+                    href="https://events.payqlick.com/event/47/ieee-uic-2025"
+                    class="btn btn-primary w-100"
+                    target="_blank"
+                    >Register</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <hr />
+        <h3 class="mb-2 fs-2" id="registration-instructions">
+          Registration Instructions
+        </h3>
+        <h3>Full Conference Author Registration</h3>
         <p>
           <b>Full Conference Author Registration</b> is required for authors
           with accepted papers (each paper must have at least one author who
@@ -58,9 +224,8 @@ title: Registration
           </li>
           <li>Program brochure and conference goodies</li>
           <li>
-            For full conference author registration (in-person), lunch, coffee
-            breaks, and reception (<b>banquet is not included</b> and can be
-            paid separately)
+            For in-person registration, lunch, coffee breaks, reception, and
+            banquet and award ceremony
           </li>
           <li>
             For papers to be published in IEEE proceedings, two extra pages are
@@ -111,10 +276,6 @@ title: Registration
               <td>Extra Page (max 2 pages)</td>
               <td colspan="2" class="text-center">$100/page</td>
             </tr>
-            <tr>
-              <td>Banquet and Award Ceremony Ticket</td>
-              <!-- <td colspan="2" class="text-center">$80/person</td> -->
-            </tr>
           </tbody>
         </table>
         <p>
@@ -130,13 +291,33 @@ title: Registration
           each requiring an additional <b>USD $300</b>. If a 4th paper is to be
           registered, the author must complete a new registration.
         </p>
-        <h4>Full Conference Non-Author Registration</h4>
+        <h3>Full Conference Non-Author Registration</h3>
         <p>
           <b>Full Conference Non-Author Registration</b> fee applies when one
           author has already completed full registration for a paper, and
           additional authors of the same paper or other attendees wish to
-          participate in the conference in person. The
-          <b>Full Conference Non-Author Registration</b> fees are listed below:
+          participate in the conference in person.
+          <b>Full Conference Non-Author Registration</b> includes:
+        </p>
+        <ul>
+          <li>
+            A copy of the proceedings the accepted paper belongs to (if
+            additional author)
+          </li>
+          <li>
+            Access to all conference, Industry Day, workshops, tutorials, and
+            special sessions
+          </li>
+          <li>Program brochure and conference goodies</li>
+          <li>
+            For in-person registration, lunch, coffee breaks, reception, and
+            banquet and award ceremony
+          </li>
+        </ul>
+
+        <p>
+          The <b>Full Conference Non-Author Registration</b> fees are listed
+          below:
         </p>
         <table class="table table-bordered" cellpadding="8" cellspacing="0">
           <thead>
@@ -181,22 +362,25 @@ title: Registration
               <td>Online Participation</td>
               <td class="text-center" colspan="2">$0</td>
             </tr>
-            <tr class="text-center">
-              <th colspan="3">Other Fees</th>
-            </tr>
-            <tr>
-              <td>Banquet and Award Ceremony Ticket</td>
-              <!-- <td class="text-center" colspan="2">$80/person</td> -->
-            </tr>
           </tbody>
         </table>
-        <h4>Industry Day Tickets</h4>
+        <h3>Industry Day Tickets</h3>
         <p>
-          The industry day (August 19) ticket is included in the registration.
-          If you wish to participate in Industry Day only, the ticket is sold
-          separately for <b>USD $100</b>.
+          The
+          <a href="/program/industry-day/">Industry Day (August 19)</a> ticket
+          is included in the registration. If you wish to participate in
+          Industry Day only, the ticket is sold separately for <b>USD $100</b>.
         </p>
-        <h4>Payment</h4>
+        <h3>Banff Day Trip</h3>
+        <p>
+          Tickets for the
+          <a href="/travel/banff-group-trip/"
+            >Banff group day trip (August 23)</a
+          >
+          can be purchased on the conference registration pages for
+          <b>USD $100</b>.
+        </p>
+        <h3>Payment</h3>
         <p>
           Payment can be made by credit cards (Visa/Mastercard/American
           Express).
