--- a/travel/banff-group-trip/index.html
+++ b/travel/banff-group-trip/index.html
@@ -54,11 +54,16 @@ title: Banff Group Trip
         in the awe-inspiring scenery, this day trip provides an unforgettable
         Canadian Rockies experience after your busy IEEE SWC schedule. Don't
         miss this chance to add an adventure to your conference itinerary and
-        create lasting memories of Canada's natural grandeur. <br /><br />Sign
-        up for the Banff day trip during your conference registration, spaces
-        are limited! <br /><br />
+        create lasting memories of Canada's natural grandeur. <br /><br />
         The detailed itinerary and pricing will be updated in the short future.
         Please continue to check for updates.
+      </p>
+      <h3>Payment</h3>
+      <p class="fs-5">
+        Sign up for the Banff day trip during your
+        <a href="/registration/">conference registration</a>, spaces are
+        limited! <br /><br />
+        <b>Cost: USD $100</b>
       </p>
     </div>
   </div>
