--- a/travel/visa-information/index.html
+++ b/travel/visa-information/index.html
@@ -55,10 +55,6 @@ title: Visa Information
             target="_blank"
             >Visa Letter Request Form</a
           >
-          <a
-            href="https://docs.google.com/forms/d/e/1FAIpQLSeI4OZwQk3iwt5mbNbSYk7_8QOgwqbLOskWUMX-QHC8pjB3pQ/viewform?usp=sharing&ouid=102783896470175567812"
-            >https://docs.google.com/forms/d/e/1FAIpQLSeI4OZwQk3iwt5mbNbSYk7_8QOgwqbLOskWUMX-QHC8pjB3pQ/viewform?usp=sharing&ouid=102783896470175567812</a
-          >
         </div>
       </div>
       <div class="fs-5">
@@ -118,20 +114,20 @@ title: Visa Information
             Canada.
           </li>
           <li>
-            To find out if you need a TRV or eTA to travel to Canada, see: Find
-            out if you need a visa to travel to Canada(url:
+            To find out if you need a TRV or eTA to travel to Canada, see:
             <a
               target="_blank"
               href="https://www.cic.gc.ca/english/visit/visas.asp"
-              >https://www.cic.gc.ca/english/visit/visas.asp</a
-            >).
+              >Find out if you need a visa to travel to Canada</a
+            >.
           </li>
           <li>
-            Click here (<a
+            <a
               target="_blank"
               href="https://www.canada.ca/en/immigration-refugees-citizenship/services/visit-canada/entry-requirements-country.html#visaRequired"
-              >https://www.canada.ca/en/immigration-refugees-citizenship/services/visit-canada/entry-requirements-country.html#visaRequired</a
-            >) to learn which countries require travellers to have visas when
+              >Click here</a
+            >
+            to learn which countries require travellers to have visas when
             entering Canada.
           </li>
         </ol>
@@ -157,20 +153,21 @@ title: Visa Information
             <ol type="a">
               <li>
                 If you require an ETA, use the following link: Electronic Travel
-                Authorization (eTA): How to apply - Canada.ca (<a
+                Authorization (eTA):
+                <a
                   target="_blank"
                   href="https://www.canada.ca/en/immigration-refugees-citizenship/services/visit-canada/eta/apply.html"
-                  >https://www.canada.ca/en/immigration-refugees-citizenship/services/visit-canada/eta/apply.html</a
-                >)
+                  >How to apply - Canada.ca</a
+                >
               </li>
               <li>
                 <p>
-                  If you require a visa, you MUST apply online through the IRCC
-                  Secure Network (<a
+                  If you require a visa, you MUST apply online through the
+                  <a
                     href="http://www.canada.ca/en/immigration-refugees-citizenship/services/application/account.html"
                     target="_blank"
-                    >http://www.canada.ca/en/immigration-refugees-citizenship/services/application/account.html</a
-                  >).
+                    >IRCC Secure Network</a
+                  >.
                 </p>
                 <p>How to Apply:</p>
                 <p>
@@ -199,32 +196,30 @@ title: Visa Information
           <li>
             <b>BIOMETRICS</b>
             <p>
-              If you are required to complete biometrics (<a
+              If you are required to complete biometrics you will be issued a
+              Biometrics Instructions Letter (BIL). Please schedule your
+              appointment as soon as you receive your BIL.You must complete your
+              biometrics before IRCC can start to process your application. For
+              information on whether or not you must provide biometrics, please
+              refer to:
+              <a
                 href="https://www.canada.ca/en/immigration-refugees-citizenship/campaigns/biometrics/facts.html"
                 target="_blank"
-                >https://www.canada.ca/en/immigration-refugees-citizenship/campaigns/biometrics/facts.html</a
-              >) you will be issued a Biometrics Instructions Letter (BIL).
-              Please schedule your appointment as soon as you receive your BIL.
-              <br /><br />
-              You must complete your biometrics before IRCC can start to process
-              your application. For information on whether or not you must
-              provide biometrics, please refer to: Fast Facts About Biometrics
-              (<a
-                href="https://www.canada.ca/en/immigration-refugees-citizenship/campaigns/biometrics/facts.html"
-                target="_blank"
-                >https://www.canada.ca/en/immigration-refugees-citizenship/campaigns/biometrics/facts.html</a
-              >).
+                >Fast Facts About Biometrics</a
+              >.
             </p>
           </li>
           <li>
             <b>PASSPORT</b>
             <p>
-              Check your application status by visiting: Check your application
-              status — Immigration and citizenship — Canada.ca (<a
+              Check your application status by visiting:
+              <a
                 href="https://www.canada.ca/en/immigration-refugees-citizenship/services/application/check-status.html"
                 target="_blank"
-                >https://www.canada.ca/en/immigration-refugees-citizenship/services/application/check-status.html</a
-              >) <br /><br />
+                >Check your application status — Immigration and citizenship —
+                Canada.ca</a
+              >
+              <br /><br />
               If your visa application is approved you will receive a letter
               instructing you to submit your passport to the closest
               <a
@@ -234,7 +229,7 @@ title: Visa Information
               >
               through mail or courier. <br /><br />
               <b
-                >Note you will not be able to enter Canada without having your
+                >Note: You will not be able to enter Canada without having your
                 visa affixed to your passport.</b
               >
             </p>
@@ -244,20 +239,25 @@ title: Visa Information
       <div>
         <h3>Need Help?</h3>
         <p class="fs-5">
-          Refer to the guide (<a
+          Refer to the
+          <a
             href="https://www.canada.ca/en/immigration-refugees-citizenship/services/application/application-forms-guides/guide-5256-applying-visitor-visa-temporary-resident-visa.html"
             target="_blank"
-            >https://www.canada.ca/en/immigration-refugees-citizenship/services/application/application-forms-guides/guide-5256-applying-visitor-visa-temporary-resident-visa.html</a
-          >) for information on how to complete your application (IMM 5257).
-          <br /><br />For further assistance, see the Help Centre (<a
+            >visa guide</a
+          >
+          for information on how to complete your application (IMM 5257).
+          <br /><br />For further assistance, see the
+          <a
             href="https://www.cic.gc.ca/english/helpcentre/results-by-topic.asp?top=16"
             target="_blank"
-            >https://www.cic.gc.ca/english/helpcentre/results-by-topic.asp?top=16</a
-          >) or complete the web form (<a
+            >Help Centre</a
+          >
+          or complete the
+          <a
             target="_blank"
             href="https://www.cic.gc.ca/english/contacts/web-form.asp?v1"
-            >https://www.cic.gc.ca/english/contacts/web-form.asp?v1</a
-          >).
+            >IRCC web form</a
+          >.
         </p>
       </div>
     </div>
