--- a/uic/index.html
+++ b/uic/index.html
@@ -41,8 +41,8 @@ title: IEEE UIC 2025
 >
   <div>
     <div class="alert alert-success" role="alert">
-      Registration Opening Soon.
-      <a href="/registration/" class="alert-link">Learn more</a>
+      Registration is now open. Early-bird deadline is <b>June 30</b>.
+      <a href="/registration/" class="alert-link">Register Now</a>
     </div>
     <div class="alert alert-warning" role="alert">
       Authors: Please use the following instructions for submitting final paper
