Update industry day only ticket info

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -49,9 +49,11 @@ title: Industry Day
           target="_blank"
           >The City of Calgary Wave Tech Centre</a
         >. <br /><br />
-        Industry day ticket included in regular
-        <a href="/registration/">conference registration</a>. Industry day only
-        tickets can be purchased for <b>USD $100</b>.
+        Industry day ticket is included in regular
+        <a href="/registration/">conference registration</a>.<br /><br />
+        Industry day only tickets can be purchased on the
+        <a href="/registration/">IEEE SWC 2025 registration page</a> for
+        <b>USD $100</b>.
       </p>
       <hr />
       <div class="col-sm-12 d-flex flex-column gap-2">
