--- a/registration/index.html
+++ b/registration/index.html
@@ -369,7 +369,8 @@ title: Registration
           The
           <a href="/program/industry-day/">Industry Day (August 19)</a> ticket
           is included in the registration. If you wish to participate in
-          Industry Day only, the ticket is sold separately for <b>USD $100</b>.
+          Industry Day only, the ticket is sold separately for
+          <b>USD $100</b> and can be purchased on the SWC registration page.
         </p>
         <h3>Banff Day Trip</h3>
         <p>
