Updated contact information

--- a/contact/index.html
+++ b/contact/index.html
@@ -89,7 +89,8 @@ title: Contact
 
         <li class="mb-2">
           For general questions about <strong>The event </strong>: Prof. Henry
-          Leung &lt;<a href="mailto:leungh@calgary.ca">leungh@calgary.ca</a>&gt;
+          Leung &lt;<a href="mailto:leungh@ucalgary.ca">leungh@ucalgary.ca</a
+          >&gt;
         </li>
       </ul>
     </div>
