--- a/index.html
+++ b/index.html
@@ -218,6 +218,21 @@ title: Home
         <h6><i>St. Francis Xavier University, Canada</i></h6>
         <p>Panel Chair</p>
       </div>
+
+      <div class="col-md-4 col-sm-6">
+        <img
+          src="/assets/images/lisa.jpg"
+          alt="Dr. Lisa Carter"
+          class="circle-img mb-3"
+        />
+        <h5>Dr. Lisa Carter</h5>
+        <h6><i>Athabasca University, Canada</i></h6>
+        <p>Chair of Panel in Women in the Smart World</p>
+      </div>
+
+
+
+      
       <div class="col-md-4 col-sm-6">
         <img
           src="/assets/images/steve-drew-small.jpg"
