added Daniel Chang to SEGA TPC

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -177,6 +177,9 @@ title: SEGA Workshop 2025
                 Jason Bernard<br />Athabasca University, Canada<br />
               </h5>
               <h5 class="fs-6">
+                Daniel Chang<br />Simon Fraser University, Canada<br />
+              </h5>
+              <h5 class="fs-6">
                 Thomas Chiu<br />The Chinese University of Hong Kong, Hong
                 Kong<br />
               </h5>
