--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -24,9 +24,9 @@ title: SEGA Workshop 2025
         Generative AI (SEGA) 2025
       </h1>
       <h3>August 21, 2025</h3>
-      <a href="./CFP_SEGA_2025.pdf" target="_blank" class="btn btn-primary w-50"
+<!--       <a href="./CFP_SEGA_2025.pdf" target="_blank" class="btn btn-primary w-50"
         >Call For Papers</a
-      >
+      > -->
     </div>
   </div>
 </section>
