SEGA TPC update: Weidong Zhang

--- a/workshops/sega/index.html
+++ b/workshops/sega/index.html
@@ -278,7 +278,9 @@ title: SEGA Workshop 2025
               <h5 class="fs-6">
                 Shuo Xu<br />Beijing University of Technology, China<br />
               </h5>
-
+              <h5 class="fs-6">
+                Weidong Zhang<br />Northeastern University, Canada<br />
+              </h5>
               <h5 class="fs-6">
                 Xiaokun Zhang<br />Athabasca University, Canada<br />
               </h5>
