Work on Industry Day

--- a/index.html
+++ b/index.html
@@ -535,6 +535,43 @@ title: Home
   </div>
 </section>
 
+<section class="container-fluid d-flex flex-column gap-4">
+  <div class="page-section w-100 px-5 pb-5">
+    <hr />
+    <div class="row mb-5 pt-5">
+      <div
+        class="col-sm-6 d-flex flex-column gap-3 justify-content-around py-2"
+      >
+        <h3 class="">
+          Join us at Industry Day and Explore how Innovators are Shaping the Future
+        </h3>
+        <p class="fs-5">
+          Join us at the 2025 IEEE Smart World Congress Industry Day, a dynamic
+          gathering of global thought leaders, pioneering innovators, and
+          economic development experts driving the next wave of smart
+          technologies. Discover cutting-edge solutions, forge strategic
+          partnerships, and explore how industry and research are shaping the
+          intelligent, interconnected world of tomorrow.
+        </p>
+        <div class="d-flex flex-row">
+          <a href="/program/industry-day/" class="btn btn-primary"
+            >Learn More About Industry Day</a
+          >
+        </div>
+      </div>
+      <div
+        class="col-sm-6 py-2 d-flex justify-content-center align-items-end"
+        style="max-height: 500px; overflow: hidden"
+      >
+        <img
+          src="/assets/images/xr-expo-ipDhOQ5gtEk-unsplash.jpg"
+          class="w-100 img-fluid"
+        />
+      </div>
+    </div>
+  </div>
+</section>
+
 <section class="container-fluid d-flex flex-column gap-4 bg-light">
   <div class="page-section w-100 px-5 py-5 d-flex flex-column gap-4">
     <div class="row">
