--- a/program/index.html
+++ b/program/index.html
@@ -85,7 +85,7 @@ title: Program
               <div class="card-body">
                 <h5>Day 3</h5>
                 <h3>
-                  Openning Ceremony, Keynote, Pannel, and
+                  Opening Ceremony, Keynote, Panel, and
                   Conference/Workshop/Special Session Paper Presentations
                 </h3>
                 <p class="fs-5">Information Coming Soon</p>
@@ -103,7 +103,7 @@ title: Program
               <div class="card-body">
                 <h5>Day 4</h5>
                 <h3>
-                  Keynote, Pannel, and Conference/Workshop/Special Session Paper
+                  Keynote, Panel, and Conference/Workshop/Special Session Paper
                   Presentations
                 </h3>
                 <h3>
@@ -124,7 +124,7 @@ title: Program
               <div class="card-body">
                 <h5>Day 5</h5>
                 <h3>
-                  Keynote, Pannel, and Conference/Workshop/Special Session Paper
+                  Keynote, Panel, and Conference/Workshop/Special Session Paper
                   Presentations
                 </h3>
                 <h3>Closing Ceremony</h3>
