Removed CFP button from main

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@ title: Home
       <div
         class="d-flex flex-column flex-md-row gap-3 justify-content-center align-items-center w-100"
       >
-        <a href="/cfp" class="btn btn-primary">Call for Papers and Proposals</a>
         <a href="/registration" class="btn btn-success"
           >Register for SWC 2025</a
         >
@@ -230,9 +229,6 @@ title: Home
         <p>Chair of Panel in Women in the Smart World</p>
       </div>
 
-
-
-      
       <div class="col-md-4 col-sm-6">
         <img
           src="/assets/images/steve-drew-small.jpg"
@@ -558,7 +554,8 @@ title: Home
         class="col-sm-6 d-flex flex-column gap-3 justify-content-around py-2"
       >
         <h3 class="">
-          Join us at Industry Day and Explore how Innovators are Shaping the Future
+          Join us at Industry Day and Explore how Innovators are Shaping the
+          Future
         </h3>
         <p class="fs-5">
           Join us at the 2025 IEEE Smart World Congress Industry Day, a dynamic
