Updated Industry Day page

--- a/program/industry-day/index.html
+++ b/program/industry-day/index.html
@@ -411,11 +411,50 @@ title: Industry Day
       class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
     >
       <div class="text-center">
-        <!-- <img
-          src=""
+        <img
+          src="/assets/images/Brent - RWI.jpg"
+          alt="Brent Guidinger"
+          class="circle-img mb-3"
+        />
+        <h4>Brent Guidinger</h4>
+        <h6><i>Strategic Accounts Executive</i></h6>
+        <h6>
+          <i
+            ><a target="_blank" href="https://rwisynthetics.com/"
+              >RWI Synthetics</a
+            ></i
+          >
+        </h6>
+        <h6>
+          <i>Edmonton, Canada</i>
+        </h6>
+      </div>
+    </div>
+    <div class="col-md-9 col-sm-8">
+      <h4>Biography</h4>
+      <p>
+        Brent Guidinger is a proud father of two who serves as the Strategic
+        Accounts Executive at RWI Synthetics. In this role, Brent has the
+        privilege of building relationships with clients, understanding their
+        values and priorities, and supporting them along their RWI journey as
+        they seek to face and solve some of the most challenging issues of our
+        time. Brent's extensive experience in the social impact sector has
+        positioned him well to support clients as they strive to build more
+        resilient, inclusive, and thriving communities.
+      </p>
+    </div>
+  </div>
+  <!-- Byron Riemann -->
+  <div class="row">
+    <div
+      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
+    >
+      <div class="text-center">
+        <img
+          src="/assets/images//Byron_Riemann.png"
           alt="Byron Riemann"
           class="circle-img mb-3"
-        /> -->
+        />
         <h4>Byron Riemann</h4>
         <h6><i>Chief Operating Officer</i></h6>
         <h6>
@@ -432,7 +471,20 @@ title: Industry Day
     </div>
     <div class="col-md-9 col-sm-8">
       <h4>Biography</h4>
-      <p>Coming soon</p>
+      <p>
+        With over 37 years' experience in engineering, management, and project
+        management, Byron has spent the last 26 years of his career applying
+        this knowledge to Rocky View County.
+        <br /><br />
+        Having started as a Transportation Roads Supervisor with Rocky View
+        County, Byron has held many different roles with the County and
+        progressed to his current role of Chief Operating Officer. The role
+        oversees a full scope and range of operations for the County including
+        transportation, utility services, capital engineering and building
+        operations. Ensuring that infrastructure is planned, constructed and
+        managed are key components to some of Rocky View’s current success for
+        economic development across the Calgary region.
+      </p>
     </div>
   </div>
   <!-- Chris Healy -->
@@ -738,23 +790,6 @@ title: Industry Day
         Canadian Senior Leadership team and holds bachelor’s and master’s
         degrees in computer science, specializing in AI.
       </p>
-    </div>
-  </div>
-  <!-- RWI Synthetics -->
-  <div class="row">
-    <div
-      class="col-md-3 col-sm-4 mb-3 mb-sm-0 d-flex flex-row gap-4 justify-content-center"
-    >
-      <div class="text-center">
-        <h4>RWI Synthetics</h4>
-      </div>
-    </div>
-    <div class="col-md-9 col-sm-8">
-      <p>More Information Coming Soon</p>
-      <a class="" target="_blank" href="https://rwisynthetics.com/"
-        >Learn More
-        <i class="bi bi-box-arrow-up-right ms-1" style="font-size: 0.85rem"></i
-      ></a>
     </div>
   </div>
   <!-- The City of Calgary Emerging Technologies Team -->
